[gd_scene load_steps=5 format=3 uid="uid://bfqwnwkj2tn3"]

[ext_resource type="Theme" uid="uid://4vnnn3rdujyi" path="res://Asset/h_box_clipboard_edit.tres" id="1_2qn87"]
[ext_resource type="Script" path="res://Scene/InputField/clipboard_line_edit.gd" id="2_pipql"]
[ext_resource type="Texture2D" uid="uid://d3s0rtbtly582" path="res://Asset/clipboard_icon.svg" id="3_pjpj7"]
[ext_resource type="PackedScene" uid="uid://bc8gfoxno1cso" path="res://Scene/InputField/valid_border_panel_container.tscn" id="4_pd4fy"]

[node name="ClipboardLineEdit" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_2qn87")
script = ExtResource("2_pipql")

[node name="ClipboardButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("3_pjpj7")

[node name="ValidBorderPanelContainer" parent="." instance=ExtResource("4_pd4fy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="ValidBorderPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="ClipboardButton" to="." method="on_pressed"]
[connection signal="text_changed" from="ValidBorderPanelContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
